app/notebooks/test_run.log
Traceback (most recent call last):
  File "/Users/harshitchoudhary/Desktop/lyzr-hackathon/code/notebooks/test_superscan_flow.py", line 33, in <module>
    from graph_rag.db import get_db, init_database
  File "/Users/harshitchoudhary/Desktop/lyzr-hackathon/code/graph_rag/__init__.py", line 21, in <module>
    from .models import (
  File "/Users/harshitchoudhary/Desktop/lyzr-hackathon/code/graph_rag/models/__init__.py", line 11, in <module>
    from .project import Project, ProjectStatus, ProjectConfig, ProjectStats, ProjectQuery
  File "/Users/harshitchoudhary/Desktop/lyzr-hackathon/code/graph_rag/models/project.py", line 169
    ,
    ^
SyntaxError: invalid syntax
